--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorteio</title>
+    <title>DevSorteio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <main>
+        <img src="./assets/sort 1.png" alt="imagem-dados">
+    </main>
 
     <header>
 
     </header>
 
 </body>
+
 </html>
