--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevSorteio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
 </head>
 
 <body>
+    <img src="./assets/sort 1.png" alt="imagem-dados">
+
+    <h2>Sortear um número</h2>
+
     <main>
-        <img src="./assets/sort 1.png" alt="imagem-dados">
+        <input placeholder="entre" class="input-min" type="number">
+        <input placeholder="e" class="input-max" type="number">
     </main>
-
-    <header>
-
-    </header>
+    
+    <button>Sortear</button>
 
 </body>
 
