--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <img src="./assets/sort 1.png" alt="imagem-dados">
-
+    <img src="./assets/dados.gif" alt="imagem-dados">
+    <p>DevSorteio</p>
     <h2>Sortear um número</h2>
 
     <main>
