acrescentando js para funciona

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <input placeholder="entre" class="input-min" type="number">
         <input placeholder="e" class="input-max" type="number">
     </main>
-    
-    <button>Sortear</button>
+
+    <button onclick="generateNuber()">Sortear</button>
+
 
 </body>
 
