--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
 </head>
-
+ricardo
 <body>
     <img src="./assets/dados.gif" alt="imagem-dados">
     <p>DevSorteio</p>
